omni/tests/goldens/types/unknown_type_09.err
tests/goldens/types/unknown_type_09.omni:1:12: error: unknown type "Mystery9"
     1 | let value9:Mystery9 = 1
       |            ^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_09.omni:1:1: error: cannot assign int to Mystery9
     1 | let value9:Mystery9 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery9 or change the variable type to int
